# packet-mlir

./: .gitignore  CMakeLists.txt  README.md  build_deps.sh  build_tests.sh  run_tests.sh
src/: CMakeLists.txt
src/Dialect/: CMakeLists.txt
src/Dialect/Packet/: CMakeLists.txt  PacketAttrs.h  PacketAttrs.td  PacketDialect.cpp  PacketDialect.h  PacketDialect.td  PacketOps.h  PacketOps.td  PacketTypes.h  PacketTypes.td
src/Dialect/Parallel/: CMakeLists.txt  ParallelDialect.cpp  ParallelDialect.h  ParallelDialect.td  ParallelOps.cpp  ParallelOps.h  ParallelOps.td  ParallelTypes.cpp  ParallelTypes.h  ParallelTypes.td
src/Packet/: CMakeLists.txt  PacketDialect.cpp  PacketDialect.h  PacketDialect.td  PacketTypes.h  PacketTypes.td
tests/: CMakeLists.txt  check_ip.ppp  increment_counter.mlir  lit.cmake.cfg.py  lit.site.cfg.py  parallel_loop.mlir  parallel_loop_tile.mlir  parallel_semantics.mlir  parallel_syntax.mlir  pkt_syntax.mlir
tools/: CMakeLists.txt  parpack-opt.cpp  registrar.cpp
